--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "target": "es5",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "lib": ["es6"]
+    "lib": ["es6"],
+    "declaration": true
   },
-  "compileOnSave": false
+  "compileOnSave": false,
+  "exclude": ["test"]
 }
