--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "epickit",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "test": "TS_NODE_CACHE=false tape -r ts-node/register test/*.test.ts"
@@ -25,6 +25,6 @@
     "rxjs": "^6.3.3",
     "tape": "^4.9.1",
     "ts-node": "^7.0.1",
-    "typescript": "^3.2.2"
+    "typescript": "^3.4.5"
   }
 }
