--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,5 +33,7 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      # run tests!
-      - run: yarn test
+      - run:
+          command: |
+            yarn coverage
+            yarn codecov
