--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "TS_NODE_CACHE=false tape -r ts-node/register test/*.test.ts"
+    "test": "TS_NODE_CACHE=false tape -r ts-node/register test/*.test.ts",
+    "coverage": "nyc --reporter=json -e .ts npm test"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,8 @@
   },
   "devDependencies": {
     "@types/tape": "^4.2.32",
+    "codecov": "^3.5.0",
+    "nyc": "^14.1.1",
     "rxjs": "^6.3.3",
     "tape": "^4.9.1",
     "ts-node": "^7.0.1",
