--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,5 +35,5 @@ jobs:
 
       - run:
           command: |
-            yarn coverage-json
+            yarn coverage-report
             yarn codecov
