update to latest dependencies

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "epickit",
   "version": "2.0.0",
-  "description": "",
+  "description": "State manager for your reactive application.",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "clean": "rm -rf dist",
+    "build": "npm run clean && tsc",
     "tape": "TS_NODE_CACHE=false tape -r ts-node/register",
     "test": "npm run tape test/*.test.ts",
     "coverage": "nyc -e .ts npm test",
@@ -24,12 +25,12 @@
     "rxjs": "^6.3.3"
   },
   "devDependencies": {
-    "@types/tape": "^4.2.32",
-    "codecov": "^3.5.0",
+    "@types/tape": "^4.2.33",
+    "codecov": "^3.6.1",
     "nyc": "^14.1.1",
     "rxjs": "^6.5.3",
     "tape": "^4.11.0",
-    "ts-node": "^8.3.0",
+    "ts-node": "^8.4.1",
     "typescript": "^3.6.3"
   }
 }
