--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "declaration": true
   },
   "compileOnSave": false,
-  "exclude": ["test", "build"]
+  "exclude": ["dist", "test", "build"]
 }
